--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,11 @@ button {
     border-radius: 0.3333rem;
     width: 5rem;
     height: 2rem;
+    box-shadow: 5px 5px 18px black;
+}
+
+button:hover {
+    background-color: #1b60cb;
 }
 
 select {
@@ -31,6 +36,20 @@ select {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     background-color: #30363D;
     border-radius: 0.3333rem;
+    border: none;
+    box-shadow: 5px 5px 18px black;
+}
+
+select:hover {
+    background-color: #414952;
+}
+
+select:active {
+    border: none;
+}
+
+select:focus {
+    border: none;
 }
 
 label {
@@ -45,6 +64,12 @@ a {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: #58a6ff;
 }
+
+a:hover {
+    color: #6cb2ff;
+}
+
+
 h1 {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: #f0f6fc;
@@ -52,6 +77,10 @@ h1 {
 h3 {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: #1f6feb;
+}
+
+h3:hover {
+    color: #64aeff;
 }
 
 .options-container {
