--- a/templates/contribution.html
+++ b/templates/contribution.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>App Academy Coaches</title>
     <link rel="stylesheet" href="../static/style.css"/>
     <script type="text/javascript" src="../static/contribution.js"></script>
     {% set tree = tree %}
