--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,21 @@ body {
     background-color: #0d1117;
 }
 
+#password {
+    width: 10rem;
+    height: 1.8rem;
+    color: #f0f6fc;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    background-color: #30363D;
+    border: none;
+    box-shadow: 5px 5px 18px black;
+    border-radius: 0.33333em;
+    margin-left: 1em;
+    margin-right: 1em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
 button {
     color: #f0f6fc;
     font-weight: 500;
