--- a/static/style.css
+++ b/static/style.css
@@ -105,16 +105,28 @@ a:hover {
 
 
 h1 {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: #f0f6fc;
 }
 h3 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     color: #1f6feb;
 }
 
 h3:hover {
     color: #64aeff;
+}
+
+h4 {
+    color: #f0f6fc;
+    font-size: 1.2em;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 }
 
 .options-container {
@@ -137,5 +149,6 @@ h3:hover {
 }
 
 .profile-image {
+    margin-top: 1em;
     border-radius: 96px;
 }
