--- a/static/style.css
+++ b/static/style.css
@@ -41,19 +41,23 @@ button {
 .file {
     color: #f0f6fc;
     font-weight: 500;
+    font-size: 0.9rem;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     background-color: #1f6feb;
     margin: 1rem;
-    padding: 0.3rem;
-    border-radius: 0.3333rem;
+    padding: 0.333333rem 0.8rem 0.33333333rem 0.8rem;
+    border-radius: 0.2rem;
     width: 5rem;
     height: 2rem;
     box-shadow: 5px 5px 18px black;
-    filter:alpha(opacity: 0)
 }
 
 .file:hover {
     background-color: #1b60cb;
+}
+
+#fileSpan {
+    color: white;
 }
 
 button:hover {
@@ -84,6 +88,9 @@ select:active {
 select:focus {
     border: none;
 }
+
+
+
 
 
 label {
