updated the upload file button.

--- a/templates/contribution.html
+++ b/templates/contribution.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../static/authentication.js"></script>
     <script type="text/javascript" src="../static/navbar.js"></script>
     <script type="text/javascript" src="../static/contribution.js"></script>
+    <script type="text/javascript" src="../static/utils.js"></script>
 </head>
 
 <body onbeforeunload="setDefault()">
