--- a/templates/contribution.html
+++ b/templates/contribution.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>App Academy Coaches</title>
     <link rel="stylesheet" href="../static/style.css"/>
-    <script type="text/javascript" src="../static/authentication.js"></script>
-    <script type="text/javascript" src="../static/navbar.js"></script>
-    <script type="text/javascript" src="../static/contribution.js"></script>
+    <script type="text/javascript" src="../static/user.js"></script>
     <script type="text/javascript" src="../static/utils.js"></script>
+    <script type="text/javascript" src="../static/data.js"></script>
+    <script type="text/javascript" src="../static/lib.js"></script>
+    <script type="text/javascript" src="../static/components.js"></script>
+
 </head>
 
 <body onbeforeunload="setDefault()">
