--- a/static/style.css
+++ b/static/style.css
@@ -111,12 +111,18 @@ a:hover {
 }
 
 
-h1 {
+.user-header {
+    color: #6cb2ff;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    color: #f0f6fc;
 }
+
+.user-header:hover{
+    color: #58a6ff;
+}
+
+
 h3 {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
